# seraphim

./: .clangd  .gitignore  CMakeLists.txt
compiler/_legacy/include/seraphim/: lexer.h  parser.h  token.h
compiler/_legacy/include/seraphim/ast/: ast.h  base.h  builder.h  decl.h  expr.h  visitor.h
compiler/_legacy/src/ast/: builder.cpp  decl.cpp  expr.cpp
compiler/_legacy/src/lexer/: lexer.cpp
compiler/_legacy/src/parser/: parser.cpp
compiler/include/seraphim/: ast.h  codegen.h  lexer.h  parser.h  token.h
compiler/src/: main.cpp
compiler/src/codegen/: codegen.cpp
compiler/src/lexer/: lexer.cpp
compiler/src/parser/: parser.cpp
docs/: index.css  index.html
examples/: hello.sp  hello_world.sp  meta_demo.sp
stdlib/spio/: spio.c  spio.h
tests/compiler/: parser_tests.cpp  tests.cpp
